k8s/image-prepuller.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: app-web-image-prepuller
  namespace: app-web
  labels:
    app.kubernetes.io/name: app-web-image-prepuller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-web-image-prepuller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-web-image-prepuller
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: hold
          image: registry.k8s.io/pause:3.10
